// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Expanded depth nested object static given initial level set to 0, should render top 2 levels 1`] = `
"<div class=\\"\\" id=\\"mosaic-provider-react-aria-0-1\\">
  <div data-overlay-container=\\"true\\">
    <div class=\\"JsonSchemaViewer\\">
      <div></div>
      <div data-level=\\"0\\">
        <div>
          <div>
            <div>
              <div role=\\"button\\"></div>
              <div>
                <div>bar</div>
                <span>object</span>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div>
            <div>
              <div role=\\"button\\"></div>
              <div>
                <div>foo</div>
                <span>array[object]</span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`Expanded depth nested object static given initial level set to 1, should render top 3 levels 1`] = `
"<div class=\\"\\" id=\\"mosaic-provider-react-aria-0-1\\">
  <div data-overlay-container=\\"true\\">
    <div class=\\"JsonSchemaViewer\\">
      <div></div>
      <div data-level=\\"0\\">
        <div>
          <div>
            <div>
              <div role=\\"button\\"></div>
              <div>
                <div>bar</div>
                <span>object</span>
              </div>
            </div>
          </div>
        </div>
        <div data-level=\\"1\\">
          <div>
            <div></div>
            <div>
              <div>
                <div role=\\"button\\"></div>
                <div>
                  <div>barFoo</div>
                  <span>object</span>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div></div>
            <div>
              <div>
                <div>
                  <div>barBar</div>
                  <span>string</span>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div></div>
            <div>
              <div>
                <div>
                  <div>barBaz</div>
                  <span>boolean</span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div>
            <div>
              <div role=\\"button\\"></div>
              <div>
                <div>foo</div>
                <span>array[object]</span>
              </div>
            </div>
          </div>
        </div>
        <div data-level=\\"1\\">
          <div>
            <div></div>
            <div>
              <div>
                <div>
                  <div>fooBar</div>
                  <span>string</span>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div></div>
            <div>
              <div>
                <div>
                  <div>fooFoo</div>
                  <span>number</span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`Expanded depth nested object static given initial level set to 2, should render top 4 levels 1`] = `
"<div class=\\"\\" id=\\"mosaic-provider-react-aria-0-1\\">
  <div data-overlay-container=\\"true\\">
    <div class=\\"JsonSchemaViewer\\">
      <div></div>
      <div data-level=\\"0\\">
        <div>
          <div>
            <div>
              <div role=\\"button\\"></div>
              <div>
                <div>bar</div>
                <span>object</span>
              </div>
            </div>
          </div>
        </div>
        <div data-level=\\"1\\">
          <div>
            <div></div>
            <div>
              <div>
                <div role=\\"button\\"></div>
                <div>
                  <div>barFoo</div>
                  <span>object</span>
                </div>
              </div>
            </div>
          </div>
          <div data-level=\\"2\\">
            <div>
              <div></div>
              <div>
                <div>
                  <div>
                    <div>barFooBar</div>
                    <span>object</span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div></div>
            <div>
              <div>
                <div>
                  <div>barBar</div>
                  <span>string</span>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div></div>
            <div>
              <div>
                <div>
                  <div>barBaz</div>
                  <span>boolean</span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div>
            <div>
              <div role=\\"button\\"></div>
              <div>
                <div>foo</div>
                <span>array[object]</span>
              </div>
            </div>
          </div>
        </div>
        <div data-level=\\"1\\">
          <div>
            <div></div>
            <div>
              <div>
                <div>
                  <div>fooBar</div>
                  <span>string</span>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div></div>
            <div>
              <div>
                <div>
                  <div>fooFoo</div>
                  <span>number</span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`HTML Output given anyOf combiner placed next to allOf given allOf merging enabled, should merge contents of allOf combiners 1`] = `
"<div class=\\"\\" id=\\"mosaic-provider-react-aria-0-1\\">
  <div data-overlay-container=\\"true\\">
    <div class=\\"JsonSchemaViewer\\">
      <div></div>
      <div>
        <div aria-label=\\"Pick a type\\" aria-haspopup=\\"true\\" aria-expanded=\\"false\\" id=\\"react-aria-0-2\\">
          Admin
          <div></div>
        </div>
        <div>(any of)</div>
      </div>
      <div data-level=\\"0\\">
        <div>
          <div>
            <div>
              <div>
                <div>type</div>
                <span>string</span>
              </div>
              <div></div>
              <span>required</span>
            </div>
            <div>
              <span>Allowed values:</span>
              <div style=\\"gap: 4px\\">
                <span>admin</span>
                <span>editor</span>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div>
            <div>
              <div>
                <div>enabled</div>
                <span>boolean</span>
              </div>
            </div>
            <div style=\\"font-size: 12px\\"><p>Is this account enabled</p></div>
          </div>
        </div>
        <div>
          <div>
            <div>
              <div>
                <div>root</div>
                <span>boolean</span>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div>
            <div>
              <div>
                <div>group</div>
                <span>string</span>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div>
            <div>
              <div>
                <div>expirationDate</div>
                <span>string</span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`HTML Output given array with oneOf containing items, should merge it correctly 1`] = `
"<div class=\\"\\" id=\\"mosaic-provider-react-aria-0-1\\">
  <div data-overlay-container=\\"true\\">
    <div class=\\"JsonSchemaViewer\\">
      <div></div>
      <div>
        <div aria-label=\\"Pick a type\\" aria-haspopup=\\"true\\" aria-expanded=\\"false\\" id=\\"react-aria-0-2\\">
          array[string]
          <div></div>
        </div>
        <div>(one of)</div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`HTML Output given complex type that includes array and complex array subtype, should not ignore subtype 1`] = `
"<div class=\\"\\" id=\\"mosaic-provider-react-aria-0-1\\">
  <div data-overlay-container=\\"true\\">
    <div class=\\"JsonSchemaViewer\\">
      <div></div>
      <div data-level=\\"0\\">
        <div>
          <div>
            <div>
              <div>
                <div>items</div>
                <div>
                  <span>null</span>
                  <span>or</span>
                  <span>array[string or number]</span>
                </div>
              </div>
            </div>
            <div style=\\"font-size: 12px\\">
              <p>
                This description can be long and should truncate once it reaches the end of the row. If it's not
                truncating then theres and issue that needs to be fixed. Help!
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`HTML Output given multiple object and string type, should process properties 1`] = `
"<div class=\\"\\" id=\\"mosaic-provider-react-aria-0-1\\">
  <div data-overlay-container=\\"true\\">
    <div class=\\"JsonSchemaViewer\\">
      <div></div>
      <div>
        <div>
          <div>
            <div role=\\"button\\"></div>
            <div>
              <div>
                <span>string</span>
                <span>or</span>
                <span>object</span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div data-level=\\"0\\">
        <div>
          <div>
            <div>
              <div>
                <div>ids</div>
                <span>array[integer]</span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`HTML Output given oneOf combiner placed next to allOf given allOf merging enabled, should merge contents of allOf combiners 1`] = `
"<div class=\\"\\" id=\\"mosaic-provider-react-aria-0-1\\">
  <div data-overlay-container=\\"true\\">
    <div class=\\"JsonSchemaViewer\\">
      <div></div>
      <div>
        <div aria-label=\\"Pick a type\\" aria-haspopup=\\"true\\" aria-expanded=\\"false\\" id=\\"react-aria-0-2\\">
          Admin
          <div></div>
        </div>
        <div>(one of)</div>
      </div>
      <div data-level=\\"0\\">
        <div>
          <div>
            <div>
              <div>
                <div>type</div>
                <span>string</span>
              </div>
              <div></div>
              <span>required</span>
            </div>
            <div>
              <span>Allowed values:</span>
              <div style=\\"gap: 4px\\">
                <span>admin</span>
                <span>editor</span>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div>
            <div>
              <div>
                <div>enabled</div>
                <span>boolean</span>
              </div>
            </div>
            <div style=\\"font-size: 12px\\"><p>Is this account enabled</p></div>
          </div>
        </div>
        <div>
          <div>
            <div>
              <div>
                <div>root</div>
                <span>boolean</span>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div>
            <div>
              <div>
                <div>group</div>
                <span>string</span>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div>
            <div>
              <div>
                <div>expirationDate</div>
                <span>string</span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`HTML Output given read mode, should populate proper nodes 1`] = `
"<div class=\\"\\" id=\\"mosaic-provider-react-aria-0-1\\">
  <div data-overlay-container=\\"true\\">
    <div class=\\"JsonSchemaViewer\\">
      <div></div>
      <div>
        <div>
          <div>
            <div role=\\"button\\"></div>
            <div>
              <div>
                <span>string</span>
                <span>or</span>
                <span>object</span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div data-level=\\"0\\">
        <div>
          <div>
            <div>
              <div>
                <div>id</div>
                <span>string</span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`HTML Output given standalone mode, should populate proper nodes 1`] = `
"<div class=\\"\\" id=\\"mosaic-provider-react-aria-0-1\\">
  <div data-overlay-container=\\"true\\">
    <div class=\\"JsonSchemaViewer\\">
      <div></div>
      <div>
        <div>
          <div>
            <div role=\\"button\\"></div>
            <div>
              <div>
                <span>string</span>
                <span>or</span>
                <span>object</span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div data-level=\\"0\\">
        <div>
          <div>
            <div>
              <div>
                <div>id</div>
                <span>string</span>
              </div>
              <div></div>
              <span>read-only</span>
            </div>
          </div>
        </div>
        <div>
          <div>
            <div>
              <div>
                <div>description</div>
                <span>string</span>
              </div>
              <div></div>
              <span>write-only</span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`HTML Output given visible $ref node, should try to inject the title immediately 1`] = `
"<div class=\\"\\" id=\\"mosaic-provider-react-aria-0-1\\">
  <div data-overlay-container=\\"true\\">
    <div class=\\"JsonSchemaViewer\\">
      <div></div>
      <div data-level=\\"0\\">
        <div>
          <div>
            <div>
              <div role=\\"button\\"></div>
              <div>
                <div>foo</div>
                <span>User</span>
              </div>
            </div>
          </div>
        </div>
        <div data-level=\\"1\\">
          <div>
            <div></div>
            <div>
              <div>
                <div>
                  <div>name</div>
                  <span>string</span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div>
            <div>
              <div role=\\"button\\"></div>
              <div>
                <div>user</div>
                <span>User</span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`HTML Output given write mode, should populate proper nodes 1`] = `
"<div class=\\"\\" id=\\"mosaic-provider-react-aria-0-1\\">
  <div data-overlay-container=\\"true\\">
    <div class=\\"JsonSchemaViewer\\">
      <div></div>
      <div>
        <div>
          <div>
            <div role=\\"button\\"></div>
            <div>
              <div>
                <span>string</span>
                <span>or</span>
                <span>object</span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div data-level=\\"0\\">
        <div>
          <div>
            <div>
              <div>
                <div>description</div>
                <span>string</span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;
